# gameops-agentic-framework

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  render.yaml
.github/: MAINTAINER  reviewers
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: auto-assign-reviewer.test.js  auto-assign-reviewer.yml  ci.yml  duplicate-prs.test.js  duplicate-prs.yml  e2e-ui-required.yml  e2e-ui.yml  e2e.yml  flake-stress-e2e.yml  flake-stress.yml  fork-e2e-mirror.yml  github-release.yml  integration.yml  issue-triage.yml  lint.yml  maintainer-approval-rerun.yml  maintainer-approval.yml  merge-ready.yml  oss-publish-images.yml  oss-regen-on-comment.yml  oss-regenerate-and-smoke.yml  oss-scorecard.yml  polly-review.yml  pr-size.yml  release-gameops-agentic-framework.yml  rerun-security-gate.yml  security-scan.yml
ap-web/: index.html  package-lock.json  package.json
ap-web/src/: App.tsx  embed.tsx  index.css  main.tsx
deploy/: README.md
deploy/cloudflare/: Dockerfile  README.md
deploy/cwsandbox/: README.md
deploy/daytona/: README.md
deploy/e2b/: README.md
designs/: ci-external-contributors-proposal.md
docs/: GAMEOPS_BOT_SETUP.md  gameops-enterprise-runbook.md  gameops-execution-policy.example.json  local-docker-deploy.md  omni-upgrade-design.md
omnigent/: claude_native.py  claude_native_bridge.py  cli.py  update_check.py
scripts/: install_oss.sh
sdks/: README.md
sdks/python-client/: README.md  pyproject.toml
sdks/python-client/omnigent_client/: _server.py
tests/: conftest.py
(+124 files in other folders)
