[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gameops-agentic-client"
version = "0.2.0.dev0"
description = "Python client SDK for the GameOps Agentic Framework server API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Sibling package — provides the SessionStreamEventType /
    # StreamEvent source of truth that the SDK validates SSE
    # envelopes against (see _sessions.py, _sse.py). Resolved via
    # the relative path below so the SDK can be installed
    # editable alongside the root ``omnigent`` package. Version-locked
    # (==) so a published SDK always pairs with the server release it
    # shipped with (release-gameops-agentic-framework.yml verifies the pin).
    "gameops-agentic-framework==0.2.0.dev0",
    "httpx>=0.27",
    "pydantic>=2.0,<3",
]

[tool.uv.sources]
gameops-agentic-framework = { path = "../..", editable = true }
